major changes to namespace, started infrastructure for syllabus

--- a/SmartRoom/SmartRoom/Web.config
+++ b/SmartRoom/SmartRoom/Web.config
@@ -100,8 +100,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <contexts>
-      <context type="SmartRoom.Web.SmartModel, SmartRoom.Web">
-        <databaseInitializer type="SmartRoom.Web.SmartModelInitializer, SmartRoom.Web" />
+      <context type="SmartRoom.Web.App_Start.SmartModel, SmartRoom.Web">
+        <databaseInitializer type="SmartRoom.Web.App_Start.SmartModelInitializer, SmartRoom.Web" />
       </context>
     </contexts>
 
@@ -113,7 +113,8 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer><applicationSettings>
+  </system.webServer>
+  <applicationSettings>
     <SmartRoom.Web.Properties.Settings>
       <setting name="ApplicationName" serializeAs="String">
         <value>SmartRoom</value>
