--- a/SmartRoom/SmartRoom/SmartRoom.Web.csproj
+++ b/SmartRoom/SmartRoom/SmartRoom.Web.csproj
@@ -282,6 +282,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\Logo.png" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\themes\base\accordion.css" />
