--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/web.config
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="SmartRoom.Web" />
+        <add namespace="Microsoft.AspNet.Identity" />
         
       </namespaces>
     </pages>
