--- a/SmartRoom/SmartRoom/packages.config
+++ b/SmartRoom/SmartRoom/packages.config
@@ -8,6 +8,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.1" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.9.1" targetFramework="net45" />
+  <package id="Google.Apis.Auth.Mvc" version="1.9.1" targetFramework="net45" />
   <package id="Google.Apis.Calendar.v3" version="1.9.0.1220" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.9.1" targetFramework="net45" />
   <package id="Google.Apis.YouTube.v3" version="1.9.0.1310" targetFramework="net45" />
